acerto no projeto

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
 <title>teste</title>
 </head>
 <body>
-	
+
 	<form action="/ligaDesliga" method="post">
-		<button type="submit">Ligar&Desligar</button>
+		<button style="height: 200px; width: 200px;" type="submit">Ligar&Desligar</button>
 	</form>
-	
-	
+
+
 </body>
 </html>
