--- a/Java/src/main/resources/templates/index.html
+++ b/Java/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<title>teste</title>
+<title>Home</title>
 </head>
 <body>
 
