--- a/Java/src/main/resources/templates/index.html
+++ b/Java/src/main/resources/templates/index.html
@@ -5,37 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="../css/bootstrap.css">
-	<link rel="stylesheet" href="../css/jquery.dynameter.css">
-	<link rel="stylesheet" href="home/homeStyle.css">
+	<link rel="stylesheet" href="../css/bibliotecas/bootstrap.css">
+	<link rel="stylesheet" href="../css/bibliotecas/jquery.dynameter.css">
+	<link rel="stylesheet" href="../css/bibliotecas/on-off-switch.css">
+	<link rel="stylesheet" href="../css/home/homeStyle.css">
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
-
+	
 	<title>Home</title>
 </head>
 <body>
 	<div class="container-fluid">
-		<form action="/ligaDesliga" method="post">
-			
-				<div class="row">
-					<div class="col-12 justify-center">
-						<div id="gaugeCxCasa"></div>
-					</div>
-					<div class="col-12">
-						<button class="btn-lg btn-primary btn-block" type="submit">
-							Bomba Casa <span class="off">OFF</span>
-						</button>
-					</div>
-					
-				</div>
-		</form>
+		<div class="row">
+			<div class="col-12 justify-center">
+				<div id="gaugeCxCasa"></div>
+			</div>
+			<div class="col-6 mt-4">
+				<input type="checkbox" id="on-off-switch" name="switch1" checked>
+			</div>
+		</div>
 	</div>
 	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-	<script src="../js/jquery-3.4.0.min.js"></script>
-	<script src="../js/jquery.dynameter.js"></script>
-	<script src="../js/bootstrap.bundle.min.js"></script>
-	<script src="../home/homeController.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+	<script src="../js/bibliotecas/jquery-3.4.0.min.js"></script>
+	<script src="../js/bibliotecas/jquery.dynameter.js"></script>
+	<script src="../js/bibliotecas/bootstrap.bundle.min.js"></script>
+	<script src="../js/bibliotecas/on-off-switch.js"></script>
+	<script src="../js/bibliotecas/on-off-switch-onload.js"></script>
+	
+	<script src="../js/home/homeController.js"></script>
 </body>
 </html>
