--- a/Java/src/main/resources/templates/index.html
+++ b/Java/src/main/resources/templates/index.html
@@ -19,8 +19,11 @@
 			<div class="col-12 justify-center">
 				<div id="gaugeCxCasa"></div>
 			</div>
-			<div class="col-6 mt-4">
-				<input type="checkbox" id="on-off-switch" name="switch1" checked>
+			<div class="col-12 mt-4">
+				<input type="checkbox" id="on-off-switch-bbcxcasa" name="switch1" checked>
+			</div>
+			<div class="col-12 mt-4">
+				<input type="checkbox" id="on-off-switch-auto-bbcxcasa" name="switch2" checked>
 			</div>
 		</div>
 	</div>
