--- a/itaipuacuJava/src/main/resources/templates/index.html
+++ b/itaipuacuJava/src/main/resources/templates/index.html
@@ -53,9 +53,7 @@
 									<div class="col-12 mt-4">
 										<input type="checkbox" id="on-off-switch-auto-bbcxcasa" name="switch2">
 									</div>
-									<canvas id="cvs" width="700" height="300">
-									    [No canvas support]
-									</canvas>
+									<canvas id="myChart" width="100" height="100"></canvas>
 								</div>
                         	</div>
 						</div>
@@ -91,6 +89,7 @@
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+	<script src="../js/bibliotecas/chart.min.js"></script>
 	<script src="../js/bibliotecas/RGraph.common.core.js"></script>
 	<script src="../js/bibliotecas/RGraph.line.js"></script>
 	<script src="../js/bibliotecas/gauge/gauge.js"> </script>
