--- a/itaipuacuJava/src/main/resources/templates/index.html
+++ b/itaipuacuJava/src/main/resources/templates/index.html
@@ -90,8 +90,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src="../js/bibliotecas/chart.min.js"></script>
-	<script src="../js/bibliotecas/RGraph.common.core.js"></script>
-	<script src="../js/bibliotecas/RGraph.line.js"></script>
+<!-- 	<script src="../js/bibliotecas/RGraph.common.core.js"></script> -->
+<!-- 	<script src="../js/bibliotecas/RGraph.line.js"></script> -->
 	<script src="../js/bibliotecas/gauge/gauge.js"> </script>
 	<script src="../js/bibliotecas/jquery-3.4.0.min.js"></script>
 	<script src="../js/bibliotecas/jquery.gauge.js"></script>
